[Scorecards] Added fixes homepage table
- Added fix for bug, where change for overall score only the average was sticky, and when scrolling horizontally the values would overlap on the left side.
- Moved sorting icons from category header to score and change.

--- a/scoring/static/scoring/scss/buttons.scss
+++ b/scoring/static/scoring/scss/buttons.scss
@@ -38,7 +38,7 @@ button {
 // No need for yellow top-shadow on buttons
 .btn {
   &:focus {
-    box-shadow: 0 4px $black !important;
+    box-shadow: inset 0 0px 0 1px $black !important;
   }
 }
 
